--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapidemo"
+    package="com.example.tonghu.apidemo"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,12 +14,20 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.myapidemo.MainActivity"
+            android:name="com.example.tonghu.apidemo.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity android:name="com.example.tonghu.apidemo.view.PopMenuDemo"
+            android:label="Views/Popup Menu">
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="com.example.tonghu.apiidemo.category.APIDEMO"/>
             </intent-filter>
         </activity>
     </application>
