--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,8 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="14" />
@@ -22,12 +24,41 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.tonghu.apidemo.view.PopMenuDemo"
+            android:label="Views/Popup Menu" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="com.example.tonghu.apiidemo.category.APIDEMO" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.tonghu.apidemo.view.TakeShootCut"
+            android:label="Views/Take Shotcut" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="com.example.tonghu.apiidemo.category.APIDEMO" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.tonghu.apidemo.animation.BouncingBall"
+            android:label="Animation/BouncingBall" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="com.example.tonghu.apiidemo.category.APIDEMO" />
+            </intent-filter>
+        </activity>
         
-        <activity android:name="com.example.tonghu.apidemo.view.PopMenuDemo"
-            android:label="Views/Popup Menu">
-            <intent-filter >
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="com.example.tonghu.apiidemo.category.APIDEMO"/>
+        <activity
+            android:name="com.example.tonghu.apidemo.animation.AnimationClone"
+            android:label="Animation/Clone" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="com.example.tonghu.apiidemo.category.APIDEMO" />
             </intent-filter>
         </activity>
     </application>
