增加Defalut Layout Animation

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,6 +61,24 @@
                 <category android:name="com.example.tonghu.apiidemo.category.APIDEMO" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.tonghu.apidemo.animation.CustomEvalutor"
+            android:label="Animation/CustomEvalutor" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="com.example.tonghu.apiidemo.category.APIDEMO" />
+            </intent-filter>
+        </activity>
+         <activity
+            android:name="com.example.tonghu.apidemo.animation.LayoutAnimationByDefault"
+            android:label="Animation/Defalut Layout Animation" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="com.example.tonghu.apiidemo.category.APIDEMO" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
