--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -53,6 +53,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.example.tonghu.apidemo.view.WebViewDemo"
+            android:label="Views/Web View" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="com.example.tonghu.apiidemo.category.APIDEMO" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name="com.example.tonghu.apidemo.animation.BouncingBall"
             android:label="Animation/BouncingBall" >
             <intent-filter>
