--- a/eventbusdemo/build.gradle
+++ b/eventbusdemo/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.1"
 
     defaultConfig {
-        applicationId "com.example.tonghu.fragment"
+        applicationId "com.example.tonghu.eventbusdemo"
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.squareup:otto:1.3.5+'
 }
