--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':material', ':fragment', ':eventbusdemo'
+include ':app', ':material', ':fragment', ':eventbusdemo', ':Application'
