--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':material', ':fragment', ':guaguaka', ':flowlayout'
+include ':app', ':material', ':fragment', ':guaguaka', ':flowlayout', ':weixin6.0'
